--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,6 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=KoHo:ital,wght@0,300;0,400;1,200;1,500;1,600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600&display=swap');
 
+* { 
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+    background-color: #000;
+};
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #373737;
+}
+
+
 body {
   background-image: url('../img/background3.jpg');
   background-repeat: no-repeat;
@@ -213,3 +229,12 @@ a {
     font-family: 'Rajdhani';
 }
 
+#go_back{
+    background: #000;
+    width: 4.5rem;
+    padding: 0.5rem;
+    height: auto;
+    margin: auto;
+    text-align: center;
+    margin-bottom: 1.2rem;
+}
