--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -123,7 +123,7 @@ a {
 .post_content {
   margin: 0;
   margin-bottom: 15px;
-  text-transform: capitalize;
+  /* text-transform: capitalize; */
   text-align: justify;
 }
 
@@ -141,6 +141,81 @@ a {
   font-style: italic;
   color: #505050;
 }
+
+/* aside{
+    width: 13%; height: 100%; 
+    position: fixed; 
+    right: 0; 
+    top: 0;
+    /* background-color: #c69; 
+}*/
+
+.sidebar {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+  
+  .sidebar a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidebar a:hover {
+    color: #f1f1f1;
+  }
+  
+  .sidebar .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-right: -7%;
+  }
+
+
+.openbtn {
+    position: absolute; 
+    right: 0; 
+    top: 0;
+
+    font-size: 25px;
+    cursor: pointer;
+    background-color: #111;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+
+    transition: all ease .5s;
+  }
+
+  .openbtn:hover {
+    background-color: #444;
+    transition: all ease .5s;
+  }
+
+  #collapsed {
+    transition: margin-right .5s;
+    padding: 0;
+  }
+
+  @media screen and (max-height: 450px) {
+    .sidebar {padding-top: 15px;}
+    .sidebar a {font-size: 18px;}
+    .openbtn {
+        padding: 10px 30px;
+  }
 
 .footer_page {
   margin-left: 5px;
@@ -242,3 +317,13 @@ a {
     margin-bottom: 1.2rem;
     font-weight: 700;
 }
+
+#github{
+    transition: filter ease 0.7s;
+}
+
+#github:hover{
+    filter: brightness(0.3);
+    transition: filter ease 0.7s;
+}
+
