--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -214,7 +214,8 @@ a {
     .sidebar {padding-top: 15px;}
     .sidebar a {font-size: 18px;}
     .openbtn {
-        padding: 10px 30px;
+        padding: 10px 50px;
+    }
   }
 
 .footer_page {
